# 1password-exporter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  flake.nix  rust-toolchain.toml  shell.nix
.devcontainer/: devcontainer.json  onCreateCommand.sh
.devcontainer.example/: devcontainer.json  onCreateCommand.sh
.github/workflows/: ci.yaml  prepare-release.yaml  publish.yaml  release.yaml
.vscode.example/: launch.json
examples/grafana-dashboard/: .env.example  dashboard.json  docker-compose.yaml
src/: command_executor.rs  main.rs  testing.rs
src/metrics_collector/: build_info.rs
src/snapshots/: onepassword_exporter__tests__metrics_serving.snap
tests/: expected_metrics.txt  integration_test.rs  test_helper.rs
