[package]
name = "onepassword-exporter"
version = "0.4.5"
edition = "2021"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.11", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
lazy_static = "1.5.0"
log = "0.4.22"
prometheus = "0.14.0"
regex = "1.12.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
simplelog = "0.12.2"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.1.1"
insta = "1.46.2"
mockall = "0.14.0"
reqwest = "0.12.5"
rstest = "0.26.1"
