[package]
name = "onepassword-exporter"
version = "0.5.1"
edition = "2021"

[dependencies]
bytes = "=1.12.0"
clap = { version = "=4.6.1", features = ["derive"] }
http-body-util = "=0.1.3"
hyper = { version = "=1.10.1", features = ["http1", "server"] }
hyper-util = { version = "=0.1.20", features = ["tokio"] }
lazy_static = "=1.5.0"
log = "=0.4.33"
prometheus = "=0.14.0"
regex = "=1.12.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
simplelog = "=0.12.2"
tokio = { version = "=1.52.3", features = ["full"] }

[dev-dependencies]
anyhow = "=1.0.102"
assert_cmd = "=2.2.2"
mockall = "=0.14.0"
reqwest = "=0.13.4"
rstest = "=0.26.1"
